--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 			</div>
 		</div>
 		<!--/ End Fun-facts -->
-		<section id="AboutUs" class="our-doctor">
+		<!-- <section id="AboutUs" class="our-doctor">
 		
 
 
@@ -469,7 +469,7 @@
 
 		
 		
-	</section>
+	</section> -->
 
 
 
